# Android-Advanced-Development

./: .gitattributes
jiagoushi/1.1.1 正向工程与逆向工程在UML图中的应用/uml/: BaseEntity.java  Callback.java  CallbackImpl.java  OrderInfo.java
jiagoushi/1.1.2 关系(依赖，泛化，关联，实现)画法/: NetEase_OOM_Laster.oom
jiagoushi/1.1.4 集中式登录架构设计/NetEase_AOP_Login/: build.gradle
jiagoushi/1.3.3.1 PMS源码分析/app/: build.gradle
jiagoushi/2.1.1 手写动态换肤框架及高可扩展性换肤应用/NetEase_Skin_Local/: settings.gradle
jiagoushi/2.1.1 手写动态换肤框架及高可扩展性换肤应用/素材/: vd_my_icn_collect.xml  vd_my_icn_download.xml  vd_my_icn_music.xml  vd_my_icn_radio.xml  vd_my_icn_recent.xml  vd_playbar_btn_songlist.xml
jiagoushi/2.1.2 网易云音乐动态换肤/: settings.gradle
jiagoushi/2.1.2 网易云音乐动态换肤/app/: build.gradle
jiagoushi/2.1.2 网易云音乐动态换肤/skin_packages/: build.gradle
jiagoushi/2.2.1 组件化gradle语法（补充热修复公开课）/: build.gradle  config.gradle  gradle.properties
jiagoushi/2.2.1 组件化gradle语法（补充热修复公开课）/app/: build.gradle
jiagoushi/2.2.1-补充-热修复公开课/: 公开课链接.txt
jiagoushi/2.2.2 组件化项目详细部署/NetEase_Modular/: config.gradle
jiagoushi/2.2.3 组件化模块间交互/: config.gradle  settings.gradle
jiagoushi/2.2.3 组件化模块间交互/app/: build.gradle
jiagoushi/2.2.3 组件化模块间交互/order/: build.gradle
jiagoushi/2.2.3 组件化模块间交互/personal/: build.gradle
jiagoushi/2.2.4 组件化APT介绍与使用/: build.gradle  settings.gradle
jiagoushi/2.2.4 组件化APT介绍与使用/app/: build.gradle
jiagoushi/2.2.4 组件化APT介绍与使用/compiler/: build.gradle
jiagoushi/2.2.5 组件化APT高级用法JavaPoet/app/: build.gradle
jiagoushi/2.2.5 组件化APT高级用法JavaPoet/compiler/: build.gradle
jiagoushi/2.2.7 组件化APT生成路由Group和Path类文件/: settings.gradle
jiagoushi/2.2.8 组件化APT生成路由动态参数类文件/: config.gradle
jiagoushi/2.2.9 组件化在网易云课堂中的实践/: config.gradle
jiagoushi/2.3.11 手写Hook式插件化之Android系统9.0详解/: 2.3.11-手写Hook式插件化之Android系统9.0详解(直播课).pptx
jiagoushi/2.3.8 手写LoadedAPK式插件化框架-ActivityThread源码分析/: LoadedAPk笔记
jiagoushi/3.1.3 手写实现EventBus/: settings.gradle
jiagoushi/3.6.1 ButterKnife详解与原理分析/: settings.gradle
ndk/1.1.1-函数/: LS3Method.cpp
ndk/1.1.2-Linux内存布局原理，指针概念，指针数组，数组指针/: LS1.cpp  LS1.h
ndk/1.1.3-结构体和共用体/: LS1.cpp
ndk/1.2.3-C++类型转换、C++IO、异常处理/: C++容器、类型转换、异常与文件流操作.md  CastType.cpp
ndk/2.1.1-静态库与动态库原理/: test  test.c  test.i  test.s
ndk/2.1.2-makefile走读与语法基础/: Makefile  main.c  tool.c  tool.h
ndk/2.2-语法/: factprral.sh  file.sh  function.sh  if.sh  mkdir.sh  number.sh  read.sh  string.sh  tar.sh  while.sh
ndk/2.2.4-Shell脚本编写与执行编译ffmpeg库/: build.sh
ndk/2.3.1-CMake语法详解/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndk/2.3.2-CMakeList.txt文件详解/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndk/3.1.3-bsdiff实现增量更新/代码/NE_BSDiff/app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
ndk/3.2.2-视频解码及同步处理/Palyer/app/: CMakeLists.txt  build.gradle
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/androidTest/java/com/wangyipalyer/: ExampleInstrumentedTest.java
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/main/: AndroidManifest.xml
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/main/cpp/: native-lib.cpp
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/main/java/com/wangyipalyer/: MainActivity.java  WangyiPlayer.java
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/main/res/layout/: activity_main.xml
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/main/res/values/: strings.xml
ndk/3.2.2-视频解码及同步处理/Palyer/app/src/test/java/com/wangyipalyer/: ExampleUnitTest.java
ndk/3.2.4 FFmpeg播放器视频播放（无声）-2/代码/NE_Player_2/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
ndk/3.2.4 FFmpeg播放器视频播放（无声）-2/代码/NE_Player_2/app/src/main/cpp/include/libavformat/: version.h
ndk/3.2.4-FFmpeg播放器音视频同步-5/: Android播放音频的几种方式介绍.md
ndk/3.2.5-FFmpeg视频推流/: 线程.md
ndk/3.2.6-FFmpeg音频推流/: 推流音频.md
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/: CMakeLists.txt  build.gradle
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/androidTest/java/com/wangyi/wangyipush/: ExampleInstrumentedTest.java
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/: AndroidManifest.xml
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/cpp/librtmp/: CMakeLists.txt
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/java/com/wangyi/wangyipush/: LivePusher.java  MainActivity.java
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/java/com/wangyi/wangyipush/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/res/layout/: activity_main.xml
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/main/res/values/: strings.xml
ndk/3.2.6-FFmpeg音频推流/【源码】WangyiPush/app/src/test/java/com/wangyi/wangyipush/: ExampleUnitTest.java
ndk/3.2.8 直播推流客户端——视频推流的实现/代码/NE_Pusher_2/app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
ndk/3.3.3 OpenCV 人脸检测实现/代码/OpenCV_Face/OpenCV_Face/: CMakeLists.txt  OpenCV_Face.cpp  OpenCV_Face.h
ndk/3.3.4 OpenCV 车牌识别-1 车辆定位/代码/VLPR_1/: CMakeLists.txt  PlateRecognize.cpp  PlateRecognize.h  SobelLocate.cpp  VLPR_1.cpp
ndk/3.3.5 OpenCV 车牌识别-2 车牌检测/代码/VLPR_1/: CMakeLists.txt  ColorLocate.h  PlateRecognize.cpp  PlateRecognize.h  SobelLocate.cpp  SobelLocate.h  SvmPredict.cpp  VLPR_1.cpp
ndk/3.4.1 opengl sl基础/: 课堂测试.3dm
ndk/3.4.2-opengl 摄像头渲染/: FBO、录制.md
ndk/3.4.4 opencv人脸检测实现/: 训练.md
ndk/3.4.5-人脸美颜/: FBO坐标.pptx  OpenGL内置函数查找网站.txt  PS软件美白图片.md  预习资料.txt
ndk/3.4.5-人脸美颜/代码/OpenGL_1/app/src/main/cpp/: CMakeLists.txt  FaceTrack.h  native-lib.cpp
ndk/4.1.0 webRTC服务器搭建/: nginx.conf  run.sh  服务器搭建.md
ndk/4.2.1 直播美颜实现/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndk/4.2.1 直播美颜实现/app/src/main/cpp/restreaming/: CMakeLists.txt  restreaming.c
ndk/4.2.1 直播美颜实现/app/src/main/cpp/rtmp/: CMakeLists.txt  libresrtmp.c  libresrtmp.h
ndk/c编译过程-From：小鲁/: test.i  test.s  testapp
ndk/【补充】服务器相关/: 云服务器购买指南.md  班级服务器.md
ui/: 1.1.2-UI-测量，布局，绘制.txt
ui/1.3.2-手写模拟事件分发/: settings.gradle
ui/2.1.4-刘海屏适配/: 2.1.4其他手机厂商适配下载地址.txt
(+1809 files in other folders)
